@@ -5,7 +5,7 @@ use strict;
 use warnings;
 
 use File::Temp qw( tempfile );
-use Test::More tests => 80;
+use Test::More tests => 81;
 
 use_ok('XML::Genx');
 
@@ -277,7 +277,14 @@ sub test_sender {
 sub test_die_on_error {
     my $w = XML::Genx->new;
     eval { $w->EndDocument };
-    like( $@, qr/^Call out of sequence/, 'EndDocument() sequence error' );
+    # The exception object should be a dualvar scalar: both number and
+    # string at the same time.  The only guarantee about the number we
+    # have is that success is zero, so we test for greater than
+    # that. The reason for doing this is that it'll make testing
+    # against constants easier later on.
+    ok( $@ > 0, 'EndDocument() sequence error is a dualvar.' );
+    like( $@, qr/^Call out of sequence/, 'EndDocument() sequence error' )
+      or diag $@;
 
     # The objects that we create are special cases that need testing
     # for die() too...
